--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
         </ul>
     </nav>
     <header>
-        <h1>Bienvenido/a "User" a tu StarGym</h1>
+        <h1 id="title">Bienvenido/a "User" a tu StarGym</h1>
     </header>
     <div class="imcCalculator">
         <h2>Utiliza nuestra calculadora de Indice de masa corporal</h2>
         <form action="">
-            <input type="text" placeholder="Altura en centimetros">
+            <input type="text" id="tallValue" placeholder="Altura en centimetros">
             <input type="text" placeholder="Peso en kg">
-            <input type="submit" class="submitButton">
+            <input type="submit" class="submitButton" id="getValue">
         </form>
+        <p class="p" id="resultImc">Resultado:</p>
     </div>
-    <div>
+    <div id="filterContainer">
         <h2>Entrene con nosotros</h2>
-        <h3>Aqui ira el form pero aplicare DOM en la segunda entrega (Creo)</h3>
     </div>
     <footer>
         <h3>Pagina creada por: Matias Gimenez Agustin (aun en desarrollo) 2022</h3>
