--- a/index.html
+++ b/index.html
@@ -32,11 +32,8 @@
         <p class="p" id="resultImc">Resultado:</p>
     </div>
     <div id="filterContainer">
-        <h2>Entrene con nosotros</h2>
+        <h2>Resultados del Filtrador</h2>
     </div>
-    <footer>
-        <h3>Pagina creada por: Matias Gimenez Agustin (aun en desarrollo) 2022</h3>
-    </footer>
     <script src="./js/script.js"></script>
 </body>
 </html>
