agrego eventos en la calculadora IMC

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     </header>
     <div class="imcCalculator">
         <h2>Utiliza nuestra calculadora de Indice de masa corporal</h2>
-        <form action="">
+        <form id="calculatorForm">
             <input type="text" id="tallValue" placeholder="Altura en centimetros">
-            <input type="text" placeholder="Peso en kg">
+            <input type="text" placeholder="Peso en kg" id="widthValue">
             <input type="submit" class="submitButton" id="getValue">
         </form>
         <p class="p" id="resultImc">Resultado:</p>
