agregamos el score contador

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
             <li><a href="./index.html" class="link">Menu</a></li>
             <li><a href="./html/register.html" class="link">Registro</a></li>
         </ul>
+        <h3 id="score">
+            Mis Puntos:
+        </h3>
     </nav>
     <header>
         <h1 id="title">Bienvenido/a "User" a tu StarGym</h1>
