To do List hecha

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <ul class="liContainer">
             <li><a href="./index.html" class="link">Menu</a></li>
             <li><a href="./html/register.html" class="link">Registro</a></li>
+            <li><a href="./html/pagina-de-prueba.html" class="link">To Do List</a></li>
         </ul>
         <h3 id="score">
             Mis Puntos:
