--- a/html/register.html
+++ b/html/register.html
@@ -36,6 +36,6 @@
         </form>
     </main>
 
-    <script src="../js/script.js"></script>
+    <script src="../js/script2.js"></script>
 </body>
 </html>
