mediaqueries de la pagina de registro

--- a/html/pagina-de-prueba.html
+++ b/html/pagina-de-prueba.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Lista de tareas</h1>
+        <h1>Lista de Misiones</h1>
         <div class="search">
             <form action="">
                 <input type="text" placeholder="Agregar tarea">
@@ -25,7 +25,7 @@
             </ul>
         </div>
         <div class="empty">
-            <p>no tienes tareas pendientes.</p>
+            <p>no tienes Misiones pendientes.</p>
         </div>
     </div>
     <script src="../js/script1.js"></script>
