--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
             <ul class="liContainer">
                 <li><a href="./index.html" class="link">Menu</a></li>
                 <li><a href="./html/register.html" class="link">Registro</a></li>
-                <li><a href="./html/pagina-de-prueba.html" class="link">To Do List</a></li>
+                <li><a href="./html/pagina-de-prueba.html" class="link">Misiones</a></li>
             </ul>
             <h3 id="score">
                 Mis Puntos:
             </h3>
         </nav>
         <header>
-            <h1 id="title">Bienvenido/a "User" a tu StarGym</h1>
+            <h1 id="title" class="title">Bienvenido/a "User" a tu StarGym</h1>
         </header>
         <div class="imcCalculator">
             <h2>Utiliza nuestra calculadora de Indice de masa corporal</h2>
