--- a/html/register.html
+++ b/html/register.html
@@ -10,16 +10,20 @@
     <link rel="stylesheet" href="../css/estilo.css">
     <title>Register</title>
 </head>
-<body>
+<body class="bodyRegister">
     <nav class="nav">
         <h2>StarGym</h2>
         <ul class="liContainer">
             <li><a href="../index.html" class="link">Menu</a></li>
             <li><a href="./register.html" class="link">Register</a></li>
+            <li><a href="../html/pagina-de-prueba.html" class="link">Misiones</a></li>
         </ul>
+        <h3 id="scoreRegister">
+            Mis Puntos:
+        </h3>
     </nav>
     <header>
-        <h1>
+        <h1 class="title">
             Registrate en StarGym
         </h1>
     </header>
