--- a/html/register.html
+++ b/html/register.html
@@ -15,8 +15,8 @@
         <h2>StarGym</h2>
         <ul class="liContainer">
             <li><a href="../index.html" class="link">Menu</a></li>
-            <li><a href="./register.html" class="link">Register</a></li>
-            <li><a href="../html/pagina-de-prueba.html" class="link">Misiones</a></li>
+            <li><a href="./register.html" class="link here">Register</a></li>
+            <li><a href="../html/misiones.html" class="link">Misiones</a></li>
         </ul>
         <h3 id="scoreRegister">
             Mis Puntos:
@@ -24,7 +24,7 @@
     </nav>
     <header>
         <h1 class="title">
-            Registrate en StarGym
+            Elige tu nickname en StarGym
         </h1>
     </header>
     <main class="containerFormulario">
