--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <nav class="nav">
             <h2>StarGym</h2>
             <ul class="liContainer">
-                <li><a href="./index.html" class="link">Menu</a></li>
+                <li><a href="./index.html" class="link here">Menu</a></li>
                 <li><a href="./html/register.html" class="link">Registro</a></li>
-                <li><a href="./html/pagina-de-prueba.html" class="link">Misiones</a></li>
+                <li><a href="./html/misiones.html" class="link">Misiones</a></li>
             </ul>
             <h3 id="score">
                 Mis Puntos:
