--- a/html/misiones.html
+++ b/html/misiones.html
@@ -8,19 +8,30 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/estilo.css">
-    <title>Document</title>
+    <title>Mis Misiones</title>
 </head>
-<body>
+<body class="content">
+    <nav class="nav">
+        <h2>StarGym</h2>
+        <ul class="liContainer">
+            <li><a href="../index.html" class="link">Menu</a></li>
+            <li><a href="./register.html" class="link">Register</a></li>
+            <li><a href="../html/misiones.html" class="link here">Misiones</a></li>
+        </ul>
+        <h3 id="scoreMisiones">
+            Mis Puntos:
+        </h3>
+    </nav>
     <div class="container">
         <h1>Lista de Misiones</h1>
         <div class="search">
             <form action="">
-                <input type="text" placeholder="Agregar tarea">
+                <input type="text" id="input" placeholder="Agregar Mision">
                 <button class="btn-add">+</button>
             </form>
         </div>
         <div class="li-container">
-            <ul>
+            <ul id="ul">
 
             </ul>
         </div>
