Switch theme hecho

--- a/html/register.html
+++ b/html/register.html
@@ -12,7 +12,7 @@
 </head>
 <body class="bodyRegister">
     <nav class="nav">
-        <h2>StarGym</h2>
+        <img src="../img/Your-Helper-logo.png" alt="Logo de Your Helper" class="logo">
         <ul class="liContainer">
             <li><a href="../index.html" class="link">Menu</a></li>
             <li><a href="./register.html" class="link here">Register</a></li>
