--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <main class="content">
         <nav class="nav">
-            <h2>StarGym</h2>
+            <img id="logo" src="./img/Your-Helper-logo.png" alt="Logo de Your Helper" class="logo">
             <ul class="liContainer">
                 <li><a href="./index.html" class="link here">Menu</a></li>
                 <li><a href="./html/register.html" class="link">Registro</a></li>
@@ -48,6 +48,10 @@
             <input type="submit">
         </form>
     </main>
+
+    <button id="switchButton">
+        cambiar color
+    </button>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="./js/script.js"></script>
