--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,51 +7,65 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
-    <title>Final Proyect</title>
+    <title>pagina prueba demo</title>
     <link rel="stylesheet" href="css/estilo.css">
 </head>
 <body>
     <main class="content">
         <nav class="nav">
             <img id="logo" src="./img/Your-Helper-logo.png" alt="Logo de Your Helper" class="logo">
-            <ul class="liContainer">
-                <li><a href="./index.html" class="link here">Menu</a></li>
-                <li><a href="./html/register.html" class="link">Registro</a></li>
-                <li><a href="./html/misiones.html" class="link">Misiones</a></li>
-            </ul>
             <h3 id="score">
                 Mis Puntos:
             </h3>
+            <button id="switchButton">
+                cambiar color
+            </button>
         </nav>
         <header>
-            <h1 id="title" class="title">Bienvenido/a "User" a tu StarGym</h1>
+            <h1 id="title" class="title">Bienvenido/a "User" a Your Helper</h1>
         </header>
-        <div class="imcCalculator">
-            <h2>Utiliza nuestra calculadora de Indice de masa corporal</h2>
-            <form id="calculatorForm">
-                <input type="text" id="tallValue" placeholder="Altura en centimetros_">
-                <input type="text" placeholder="Peso en kg_" id="widthValue">
-                <input type="submit" class="submitButton" id="getValue">
+        <section class="mainSection">
+            <form action="" id="registerForm">
+                <label for="name">Ingresa tu nickname</label>
+                <input name="name"  type="text" placeholder="ejemplo: The Mandalorian">
+                <input type="submit" id="registerSubmit">
             </form>
-            <p class="p" id="resultImc">Resultado:</p>
-            <p id="resultOfCalculator"></p>
-        </div>
-        <form id="filterForm">
-            <h2>Filtre los entrenamientos:</h2>
-            <select id="filterSelector">
-                <option value="principiante">Principiante</option>
-                <option value="vengador">Vengador</option>
-                <option value="challenger">Challenger</option>
-            </select>
-            <input type="submit">
-        </form>
-    </main>
 
-    <button id="switchButton">
-        cambiar color
-    </button>
+            <div class="imcCalculator">
+                <h2>Utiliza nuestra calculadora de Indice de masa corporal</h2>
+                <form id="calculatorForm">
+                    <input type="text" id="tallValue" placeholder="Altura en centimetros_">
+                    <input type="text" placeholder="Peso en kg_" id="widthValue">
+                    <input type="submit" class="submitButton" id="getValue">
+                </form>
+                <p class="p" id="resultImc">Resultado:</p>
+                <p id="resultOfCalculator"></p>
+            </div>
+        </section>
+        <div class="container">
+            <h1>Lista de Misiones</h1>
+            <div class="search">
+                <form action="">
+                    <input type="text" id="input" placeholder="Agregar Mision">
+                    <button class="btn-add">+</button>
+                </form>
+            </div>
+            <div class="li-container">
+                <ul id="ul">
+
+                </ul>
+            </div>
+            <div class="empty">
+                <p>no tienes Misiones pendientes.</p>
+            </div>
+        </div>
+    </main>
+    <footer>
+        <p>¡La pagina <img src="./img/Your-Helper-logo.png" width="120px" alt=""> esta desarrollandose actualmente, visita <a href="https://github.com/matiasgimenezagustin/Star-Gym">mi repositorio</a> para mas novedades!</p>
+    </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="./js/script.js"></script>
+    <script src="./js/scriptIndex.js"></script>
 </body>
 </html>
