--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
-    <title>pagina prueba demo</title>
+    <title>Your Helper</title>
     <link rel="stylesheet" href="css/estilo.css">
 </head>
 <body>
@@ -66,7 +66,7 @@
         </div>
     </main>
     <footer>
-        <p>¡La pagina <img id="logoFooter" src="./img/Your-Helper-logo.png" width="120px" alt=""> esta desarrollandose actualmente, visita <a href="https://github.com/matiasgimenezagustin/Star-Gym">mi repositorio</a> para mas novedades!</p>
+        <p>¡La pagina <img id="logoFooter" src="./img/Your-Helper-logo.png" width="120px" alt="Your Helper Logo"> esta desarrollandose actualmente, visita <a href="https://github.com/matiasgimenezagustin/Star-Gym">mi repositorio</a> para mas novedades!</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
